# base-framework

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/example_framework/: CMakeLists.txt  ModuleA.h  ModuleB.h  ModuleC.h  application.conf  main.cpp
include/: Application.h  BaseModule.h  Component.h  ModuleFactory.h  Singleton.h
include/configure/: ProtobufConfig.h
include/framework/: Application.h  BaseModule.h  Framework.h
include/framework/common/: Scheduled.h  Singleton.h
include/framework/component/: MonitorModule.h
include/framework/configure/: ProtobufConfig.h
include/logging/: GoogleGlog.h
src/: Application.cpp  BaseModule.cpp  CMakeLists.txt  ModuleFactory.cpp
src/configure/: ProtobufConfig.cpp
src/framework/: Application.cpp  BaseModule.cpp  CMakeLists.txt  Framework.cpp
src/framework/common/: Scheduled.cpp
src/framework/component/: MonitorModule.cpp
src/framework/configure/: ProtobufConfig.cpp
src/framework/logging/: GoogleGlog.cpp
src/framework/proto/: ApplicationParam.proto
src/logging/: GoogleGlog.cpp
src/proto/: ApplicationParam.proto
test/: CMakeLists.txt
test/test_component/: main.cpp
test/test_configure/: CMakeLists.txt  main.cpp
